# haskel-api-test

./: .gitignore  BT.db  BT.sqbpro  BudgetTracker.md  CLAUDE.md  CLAUDE.md   DDD.txt  HabitTrackerApi.md  access.csv  access2.csv  api.md  chat.md  clean.txt  command.xt  curl.txt  diff.txt  mydb  mydb.db  test.cabal  wscat.txt  作法.txt  座右の銘.txt  掲示板.md
app/: Main.hs
memory/: MEMORY.md  feedback_monad_explanation.md
src/: Main.hs
src/App/: API.hs  Config.hs  DB.hs  Env.hs  Server.hs  Server1.hs  Server2.hs  Server3.hs  Server4.hs  Types.hs
src/App/API/Greeting/: API.hs  Types.hs
src/App/API/Greeting/Handler/: Hello.hs  Position.hs
src/App/API/Marketing/: API.hs  Handler.hs  Types.hs
src/App/API/Message/: API.hs
src/App/API/Message/Handler/: Get.hs  Post.hs
src/App/API/Person/: API.hs  Types.hs
src/App/API/Person/Handler/: Age.hs  Name.hs  Name2.hs  WithError.hs
src/App/API/Redis/: API.hs
src/App/API/Redis/Handler/: Get.hs
src/App/API/SqlServerDemo/: API.hs
src/App/API/SqlServerDemo/Handler/: Get.hs  Post.hs
src/App/Application/Auth/: Principal.hs  Repository.hs  UseCase.hs
src/App/Application/Board/: Command.hs  PublicRepository.hs  Repository.hs  UseCase.hs
src/App/Application/BudgetTracker/: Command.hs  Repository.hs  UseCase.hs
src/App/Application/Chat/: Command.hs  Repository.hs  UseCase.hs
src/App/Application/Greeting/: UseCase.hs
src/App/Application/HabitTracker/: Command.hs  Repository.hs  UseCase.hs
src/App/Application/Marketing/: UseCase.hs
src/App/Application/Message/: UseCase.hs
src/App/Application/Person/: UseCase.hs
src/App/Application/Redis/: UseCase.hs
src/App/Application/SqlServerDemo/: UseCase.hs
src/App/Application/Task/: Command.hs  Repository.hs  UseCase.hs
src/App/Auth/: Auth.hs  BasicAuth.hs  Handler.hs  UserStore.hs
src/App/Core/: Config.hs  Env.hs
src/App/DB/: RedisPool.hs  SQLiteDB.hs  SqlserverPool.hs  Types.hs
src/App/Domain/Auth/: Entity.hs  Repository.hs
src/App/Domain/Board/: BoardService.hs  Entity.hs  ValueObject.hs
src/App/Domain/BudgetTracker/: Entity.hs  Operation.hs  Repository.hs
src/App/Domain/Chat/: Entity.hs  Repository.hs
src/App/Domain/Greeting/: Entity.hs
src/App/Domain/HabitTracker/: Entity.hs  Operation.hs  Repository.hs  StreakService.hs
src/App/Domain/Marketing/: Entity.hs
src/App/Domain/Message/: Entity.hs  Repository.hs
src/App/Domain/Person/: Entity.hs
src/App/Domain/Redis/: Repository.hs
src/App/Domain/SqlServerDemo/: Entity.hs  Repository.hs
src/App/Domain/Task/: Entity.hs  Operation.hs  Repository.hs
src/App/Greeting/: API.hs  Types.hs
src/App/Greeting/Handler/: Hello.hs  Position.hs
src/App/Infrastructure/DB/: Redis.hs  SQLite.hs  SqlServer.hs  Types.hs
src/App/Infrastructure/File/: FileStore.hs
src/App/Infrastructure/Logger/: CsvLogger.hs  CsvLogger2.hs  JsonLogger.hs
src/App/Infrastructure/Repository/: ChatSTM.hs  HabitSQLServer.hs  MessageSQLite.hs  RecordSQLite.hs  RedisValue.hs  SqlServerMSSQL.hs  TaskSQLServer.hs  TaskSQLServer2.hs  TokenRedis.hs  UserInMemory.hs  UserSQLServer.hs
src/App/Infrastructure/Repository/Auth/: TokenRedis.hs  UserInMemory.hs
src/App/Infrastructure/Repository/Board/: BoardSQLServer.hs
src/App/Infrastructure/Repository/BudgetTracker/: RecordSQLite.hs
src/App/Infrastructure/Repository/Chat/: ChatSTM.hs
src/App/Infrastructure/Repository/Habit/: HabitSQLServer.hs
src/App/Infrastructure/Repository/HabitTracker/: HabitSQLServer.hs
src/App/Infrastructure/Repository/Record/: RecordSQLite.hs
src/App/Infrastructure/Repository/Task/: TaskSQLServer.hs  TaskSQLServer2.hs
src/App/Infrastructure/Repository/User/: UserSQLServer.hs
src/App/Marketing/: API.hs  Handler.hs  Types.hs
src/App/Message/: API.hs
src/App/Message/Handler/: Get.hs  Post.hs
src/App/Middleware/: CsvLogger.hs  CsvLogger2.hs  TokenAuth.hs
src/App/Person/: API.hs  Types.hs
src/App/Person/Handler/: Age.hs  Name.hs  Name2.hs  WithError.hs
src/App/Presentation/Auth/: API.hs  Handler.hs
src/App/Presentation/Board/: API.hs  Handler.hs  Request.hs  Response.hs
src/App/Presentation/BudgetTracker/: API.hs  Handler.hs  Request.hs  Response.hs
src/App/Presentation/Chat/: API.hs  Handler.hs  Request.hs  Response.hs
src/App/Presentation/Greeting/: API.hs  Handler.hs
src/App/Presentation/HabitTracker/: API.hs  Handler.hs  Request.hs  Response.hs
src/App/Presentation/Marketing/: API.hs  Handler.hs
src/App/Presentation/Message/: API.hs  Handler.hs
src/App/Presentation/Person/: API.hs  Handler.hs
src/App/Presentation/Redis/: API.hs  Handler.hs
src/App/Presentation/SqlServerDemo/: API.hs  Handler.hs
src/App/Presentation/Task/: API.hs  Handler.hs  Request.hs  Response.hs
src/App/RedisTest/: API.hs
src/App/RedisTest/Handler/: RedisGet.hs
src/App/Server/: API.hs  Router.hs
src/App/SqlServer/: API.hs
src/App/SqlServer/Handler/: Get.hs  Post.hs
test/: Spec.hs
test/App/Domain/BudgetTracker/: EntitySpec.hs
test/App/Presentation/Board/: APISpec.hs
test/App/Presentation/Task/: APISpec.hs
