cabal-version:       3.0
name:                test
version:             0.1.0.0
build-type:          Simple

executable test
  main-is:           Main.hs
  other-modules:     App.Core.Config
                   , App.Core.Env
                   , App.Infrastructure.DB.Types
                   , App.Infrastructure.DB.SQLite
                   , App.Infrastructure.DB.SqlServer
                   , App.Infrastructure.DB.Redis
                   , App.Infrastructure.Logger.CsvLogger
                   , App.Infrastructure.Logger.CsvLogger2
                   , App.Middleware.TokenAuth
                   , App.Domain.Auth.Entity
                   , App.Domain.Auth.Repository
                   , App.Application.Auth.UseCase
                   , App.Infrastructure.Repository.UserInMemory
                   , App.Infrastructure.Repository.UserSQLServer
                   , App.Infrastructure.Repository.TokenRedis
                   , App.Domain.Message.Entity
                   , App.Domain.Message.Repository
                   , App.Application.Message.UseCase
                   , App.Infrastructure.Repository.MessageSQLite
                   , App.Presentation.Auth.API
                   , App.Presentation.Auth.Handler
                   , App.Domain.Greeting.Entity
                   , App.Application.Greeting.UseCase
                   , App.Presentation.Greeting.API
                   , App.Presentation.Greeting.Handler
                   , App.Domain.Marketing.Entity
                   , App.Application.Marketing.UseCase
                   , App.Presentation.Marketing.API
                   , App.Presentation.Marketing.Handler
                   , App.Domain.Person.Entity
                   , App.Application.Person.UseCase
                   , App.Presentation.Message.API
                   , App.Presentation.Message.Handler
                   , App.Presentation.Person.API
                   , App.Presentation.Person.Handler
                   , App.Domain.Redis.Repository
                   , App.Application.Redis.UseCase
                   , App.Infrastructure.Repository.RedisValue
                   , App.Presentation.Redis.API
                   , App.Presentation.Redis.Handler
                   , App.Domain.SqlServerDemo.Entity
                   , App.Domain.SqlServerDemo.Repository
                   , App.Application.SqlServerDemo.UseCase
                   , App.Infrastructure.Repository.SqlServerMSSQL
                   , App.Presentation.SqlServerDemo.API
                   , App.Presentation.SqlServerDemo.Handler
                   , App.Domain.Task.Entity
                   , App.Domain.Task.Repository
                   , App.Application.Task.Command
                   , App.Application.Task.UseCase
                   , App.Infrastructure.Repository.TaskSQLServer
                   , App.Presentation.Task.Request
                   , App.Presentation.Task.Response
                   , App.Presentation.Task.API
                   , App.Presentation.Task.Handler
                   , App.Server.API
                   , App.Server.Router
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded

  build-depends:
      base           >= 4.7 && < 5
    , aeson
    , servant-server
    , wai
    , warp
    , time
    , wai-cors
    , http-types
    , mtl
    , bytestring
    , sqlite-simple
    , mssql-simple
    , network
    , resource-pool
    , hedis
    , containers
    , text
    , http-client
    , servant-client
    , uuid
    , effectful-core
