cabal-version:       3.0
name:                test
version:             0.1.0.0
build-type:          Simple

-- ─────────────────────────────────────────────
-- Library: src/ 以下の本体ロジック全体
-- ─────────────────────────────────────────────
library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

  exposed-modules:
      App.Core.Config
    , App.Core.Env
    , App.Infrastructure.DB.Types
    , App.Infrastructure.DB.SQLite
    , App.Infrastructure.DB.SqlServer
    , App.Infrastructure.DB.Redis
    , App.Infrastructure.Logger.CsvLogger
    , App.Infrastructure.Logger.JsonLogger
    , App.Middleware.TokenAuth
    , App.Domain.Auth.Entity
    , App.Application.Auth.Repository
    , App.Application.Auth.Principal
    , App.Application.Auth.UseCase
    , App.Infrastructure.Repository.Auth.UserInMemory
    , App.Infrastructure.Repository.User.UserSQLServer
    , App.Infrastructure.Repository.Auth.TokenRedis
    , App.Presentation.Auth.API
    , App.Presentation.Auth.Handler
    , App.Domain.Chat.Entity
    , App.Application.Chat.Repository
    , App.Application.Chat.Command
    , App.Application.Chat.UseCase
    , App.Infrastructure.Repository.Chat.ChatSTM
    , App.Presentation.Chat.Request
    , App.Presentation.Chat.Response
    , App.Presentation.Chat.API
    , App.Presentation.Chat.Handler
    , App.Domain.Task.Entity
    , App.Application.Task.Repository
    , App.Application.Task.Command
    , App.Application.Task.UseCase
    , App.Infrastructure.Repository.Task.TaskSQLServer
    , App.Infrastructure.Repository.Task.TaskSQLServer2
    , App.Presentation.Task.Request
    , App.Presentation.Task.Response
    , App.Presentation.Task.API
    , App.Presentation.Task.Handler
    , App.Infrastructure.Repository.BudgetTracker.RecordSQLite
    , App.Presentation.BudgetTracker.Request
    , App.Presentation.BudgetTracker.API
    , App.Presentation.BudgetTracker.Response
    , App.Presentation.BudgetTracker.Handler
    , App.Server.API
    , App.Server.Router
    , App.Domain.BudgetTracker.Entity
    , App.Application.BudgetTracker.Repository
    , App.Application.BudgetTracker.Command
    , App.Application.BudgetTracker.UseCase
    , App.Domain.HabitTracker.Entity
    , App.Domain.HabitTracker.StreakService
    , App.Application.HabitTracker.Repository
    , App.Application.HabitTracker.Command
    , App.Application.HabitTracker.UseCase
    , App.Infrastructure.Repository.HabitTracker.HabitSQLServer
    , App.Presentation.HabitTracker.Request
    , App.Presentation.HabitTracker.Response
    , App.Presentation.HabitTracker.API
    , App.Presentation.HabitTracker.Handler
    , App.Domain.Board.Entity
    , App.Domain.Board.ValueObject
    , App.Domain.Board.BoardService
    , App.Infrastructure.Repository.Board.BoardSQLServer
    , App.Application.Board.Command
    , App.Application.Board.Repository
    , App.Application.Board.PublicRepository
    , App.Application.Board.UseCase
    , App.Presentation.Board.Request
    , App.Presentation.Board.Response
    , App.Presentation.Board.API
    , App.Presentation.Board.Handler

  build-depends:
      base           >= 4.7 && < 5
    , aeson
    , servant-server
    , wai
    , warp
    , time
    , wai-cors
    , http-types
    , mtl
    , bytestring
    , sqlite-simple
    , mssql-simple
    , network
    , resource-pool
    , hedis
    , containers
    , text
    , http-client
    , servant-client
    , uuid
    , effectful-core
    , servant-websockets
    , websockets
    , stm
    , servant-multipart
    , filepath
    , directory

-- ─────────────────────────────────────────────
-- Executable: Main.hs だけ（起動のみ担当）
-- ─────────────────────────────────────────────
executable test
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded

  build-depends:
      base           >= 4.7 && < 5
    , test
    , mssql-simple
    , hedis

-- ─────────────────────────────────────────────
-- Test suite: library を参照してテスト
-- ─────────────────────────────────────────────
test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded

  other-modules:
      App.Domain.BudgetTracker.EntitySpec
    , App.Presentation.Task.APISpec

  build-depends:
      base
    , hspec
    , hspec-wai
    , aeson
    , text
    , bytestring
    , http-types
    , servant-server
    , wai
    , effectful-core
    , test
